<?xml version="1.0"?>
<package>
  
  <name>s5fh_demo</name>
  <version>0.0.1</version>
  <description>The s5fh_gripper package</description>
  
  <maintainer email="ruehl@fzi.de">Steffen Rühl</maintainer>

  <license>TODO</license>

  <author email="ruehl@fzi.de">Steffen Rühl</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>interpolator</run_depend>
  <run_depend>pathloader</run_depend>
  <run_depend>s5fh_gripper</run_depend>
  <run_depend>s5fh_controller</run_depend>
</package>
