<?xml version="1.0"?>
<package>
  
  <name>s5fh_gripper</name>
  <version>0.0.1</version>
  <description>The s5fh_gripper package</description>
  
  <maintainer email="ruehl@fzi.de">Steffen Rühl</maintainer>

  <license>TODO</license>

  <author email="ruehl@fzi.de">Steffen Rühl</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>urdf</run_depend>
  
</package>
